tar (1.20-2) UNRELEASED; urgency=low

  * version the Replaces entry for cpio, closes: #483355

 -- Bdale Garbee <bdale@gag.com>  Fri, 30 May 2008 10:47:42 -0600

tar (1.20-1) unstable; urgency=low

  * new upstream version

 -- Bdale Garbee <bdale@gag.com>  Wed, 16 Apr 2008 19:24:39 -0600

tar (1.19-3) unstable; urgency=low

  * upstream patch to remove error message when updating a non-existing archive
  * patch from Phil Hands for man page prevents URL splitting, closes: #463215

 -- Bdale Garbee <bdale@gag.com>  Tue, 18 Mar 2008 14:25:33 -0600

tar (1.19-2) unstable; urgency=low

  * patch from Ubuntu to fix FTBFS with gcc-4.3, closes: #452096, #441606
  * more descriptive short description in control, closes: #406301

 -- Bdale Garbee <bdale@gag.com>  Fri, 22 Feb 2008 18:17:50 -0700

tar (1.19-1) unstable; urgency=low

  * new upstream version
  * no need to deliver license text, as GPL-3 is in common-licenses now

 -- Bdale Garbee <bdale@gag.com>  Sun, 21 Oct 2007 11:47:17 -0600

tar (1.18-3) unstable; urgency=high

  * fix build with gcc-4.3, closes: #441606

 -- Bdale Garbee <bdale@gag.com>  Thu, 13 Sep 2007 00:37:36 +0200

tar (1.18-2) unstable; urgency=high

  * patch from Neil Moore improving the man page, closes: #439916
  * patch from Justin Pryzby improving the man page, closes: #433553
  * patch from upstream to fix directory traversal concern on extraction
    documented in (CVE-2007-4131), closes: #439335
  * urgency to high since preceding bug has having security implications

 -- Bdale Garbee <bdale@gag.com>  Wed, 05 Sep 2007 10:20:45 +0100

tar (1.18-1) unstable; urgency=low

  * new upstream version, closes: #429417, #426808
  * include COPYING file containing GPLv3 until base-file is updated
  * fix filename of NEWS.Debian so that it actually gets delivered
  * patch from Wim De Smet to document --strip in the man page, closes: #417810
  * patch from upstream CVS to fix --verify on large files, closes: #422718