@@ -1,8 +1,10 @@
 tar (1.20-2) UNRELEASED; urgency=low
 
   * version the Replaces entry for cpio, closes: #483355
+  * move config.* update to configure target, yields a smaller diff that 
+    doesn't clash with git-buildpackage... already had autotools-dev build dep!
 
- -- Bdale Garbee <bdale@gag.com>  Fri, 30 May 2008 10:47:42 -0600
+ -- Bdale Garbee <bdale@gag.com>  Tue, 24 Feb 2009 22:16:11 -0700
 
 tar (1.20-1) unstable; urgency=low
 
